<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PilotCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity_drawer">main_activity_drawer</string>
    <string name="description_icon_drawer_item">icon</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <string name="WindCalculator">Wind</string>
    <string name="Converter">Unit Conversions</string>
    <string name="Calculator">Calculator</string>
    <string name="Atmosphere">Atmosphere</string>
    <string name="Altimetry">Altimetry</string>
    <string name="Speed">Speed</string>

    <string-array name="nav_drawer_items">
        <item>@string/Converter</item>
        <item>@string/Calculator</item>
        <item>@string/WindCalculator</item>
        <item>@string/Atmosphere</item>
        <item>@string/Altimetry</item>
        <item>@string/Speed</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_conversions</item>
        <item>@drawable/ic_calculator</item>
        <item>@drawable/ic_wind</item>
        <item>@drawable/ic_temp_unselected</item>
        <item>@drawable/ic_length_unselected</item>
        <item>@drawable/ic_speed_unselected</item>
    </array>

    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="volume">Volume</string>
    <string name="speed">Speed</string>

    <string name="inflightWind">In-flight wind</string>
    <string name="groundvector">Track &amp; Ground Speed</string>
    <string name="airvector">Heading &amp; True Airspeed</string>
    <string name="what_calculation">Calculate...</string>
    <string name="windcomponents">Wind Components</string>
    <string name="true_air_speed">Air Speed</string>
    <string name="track">Track</string>
    <string name="ground_speed">Ground Speed</string>
    <string name="wind">Wind</string>
    <string name="heading">Heading</string>
    <string name="inputs">Input Parameters</string>
    <string name="results">Result</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="runway">Runway</string>
    <string name="headwind">Headwind</string>
    <string name="crosswind">Crosswind</string>
    <string name="choose_operation">Select your action...</string>
    <string name="standard_temperature">Standard Temperature</string>
    <string name="outside_temperature_mach">Outside Air Temperature from mach nr.</string>
    <string name="outside_temperature_pressure_altitude">Outside Air Temperature from pressure altitude.</string>
    <string name="pressure_calculation">Pressure at altitude</string>
    <string name="AtmosphereCalculator">Standard Atmosphere</string>
    <string name="AltimetryCalculator">Altimetry</string>
    <string name="SpeedCalculator">Speed</string>
    <string name="altitude">Altitude</string>
    <string name="standard_temperature_short">Std. Temp.</string>
    <string name="indicatedTemperature">Indicated Temp.</string>
    <string name="mach">Mach</string>
    <string name="coefficientLabel">Recovery coeff.</string>
    <string name="outside_temperature_short">OAT</string>
    <string name="airspeed">Airspeed</string>
    <string name="pressure_altitude_short">Pressure Alt.</string>
    <string name="pressure_altitude">Pressure Altitude</string>
    <string name="density_Altitude">Density Altitude</string>
    <string name="true_altitude">True Altitude</string>
    <string name="true_airspeed_button">True Airspeed</string>
    <string name="mach_temperature">Mach from air temp.</string>
    <string name="mach_altitude">Mach from pressure altitude</string>
    <string name="sound_speed">Speed of Sound</string>
    <string name="elevation">Elevation</string>
    <string name="density_Altitude_short">Density Alt.</string>
    <string name="calibrated_altitude_short">Cal. Alt.</string>
    <string name="true_altitude_short">True Alt.</string>
    <string name="calibrated_airspeed_short">Cal. Airspeed</string>
    <string name="true_airspeed">True Airspeed</string>
    <string name="app_description">Solve the most common flight calculations.This calculator is a digital port loosely based on Jeppensen\'s CR-3</string>
</resources>
