<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_calculation"
        android:textColor="#fffdfdfe"
        android:textSize="30sp" />

    <Button
        android:id="@+id/standardTemperature"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/standard_temperature" />

    <Button
        android:id="@+id/outsideTemperatureMach"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/outside_temperature_mach" />

    <Button
        android:id="@+id/outsideTemperaturePressureAltitude"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/outside_temperature_pressure_altitude" />

    <Button
        android:id="@+id/pressure"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/pressure_calculation" />
</LinearLayout>