<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_calculation"
        android:textColor="#fffdfdfe"
        android:textSize="30sp" />

    <Button
        android:id="@+id/pressureAltitude"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/pressure_altitude" />

    <Button
        android:id="@+id/densityAltitude"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/density_Altitude" />

    <Button
        android:id="@+id/trueAltitude"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/true_altitude" />

</LinearLayout>