<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_wind"
        android:textColor="#fffdfdfe"
        android:textSize="30sp" />

    <Button
        android:id="@+id/inflightwind"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/inflightWind" />

    <Button
        android:id="@+id/groundvector"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/groundvector" />


    <Button
        android:id="@+id/airvector"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/airvector" />

    <Button
        android:id="@+id/windcomponents"
        style="@style/NumberButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/windcomponents" />
</LinearLayout>