<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.marianogiuffrida.customview.RadioButtonsTable
        android:id="@+id/radio_conversionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <RadioButton
                android:id="@+id/radio_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight" />

            <RadioButton
                android:id="@+id/radio_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/length" />

            <RadioButton
                android:id="@+id/radio_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature" />

        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/radio_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pressure" />

            <RadioButton
                android:id="@+id/radio_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volume" />

            <RadioButton
                android:id="@+id/radio_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed" />

        </TableRow>

    </com.marianogiuffrida.customview.RadioButtonsTable>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/conversions_from_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/conversions_to_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/conversions_child_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>