<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    tools:context="com.marianogiuffrida.pilotcalc.UI.fragments.Atmosphere.TemperatureFromAltitudeFragment">
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/inputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLabel"
            android:background="@drawable/round_corners_rectangle"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/trueAirspeedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trueAirspeedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/true_airspeed"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/airspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/airspeedSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/outsideTemperatureLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trueAirspeedLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/outsideTemperatureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outside_temperature_short"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal|numberSigned" />

                <Spinner
                    android:id="@+id/temperatureSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/outputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputs"
            android:text="@string/results"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/machLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/outputLabel"
            android:background="@drawable/round_corners_rectangle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/machLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mach"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/mach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>