<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context="com.marianogiuffrida.pilotcalc.UI.fragments.Atmosphere.TemperatureFromAltitudeFragment">
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/inputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLabel"
            android:background="@drawable/round_corners_rectangle"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/airspeedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/airspeedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calibrated_airspeed_short"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/airspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/airspeedSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/altitudeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/airspeedLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/altitudeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pressure_altitude_short"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/altitudeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/temperaturLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/altitudeLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/indictedTemperatureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/indicatedTemperature"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/indicatedTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal|numberSigned" />

                <Spinner
                    android:id="@+id/indicatedTemperatureSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/otherInputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperaturLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coeffLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/coefficientLabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/coeff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/outputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputs"
            android:text="@string/results"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/trueAirspeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/outputLabel"
            android:background="@drawable/round_corners_rectangle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trueAirspeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/true_airspeed"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/trueAirspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/trueAirspeedSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>